# agentic_legal

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routers/: chat.py  search.py
app/core/: config.py  logging.py
app/crew/: agents.py  tasks.py
app/schemas/: agentic.py  chat.py  search.py
app/services/agents/: answer_agent.py  router_agent.py  runtime.py  verifier_agent.py
app/services/chunking/: __init__.py  html_to_markdown.py  legal_chunk_extractor.py  legal_chunk_models.py  legal_tree_builder.py  legal_tree_models.py
app/services/legal/: answer_service.py  evidence_assembler.py  router_service.py  verifier_service.py
app/services/llm/: openai_client.py
app/services/orchestrator/: legal_flow.py
app/services/retrieval/: artifact_import.py  artifact_store.py  centroids.py  checkpoint_store.py  filter_policy.py  hybrid_ingest.py  hybrid_support.py  local_reranker.py  qdrant_service.py
app/services/storage/: session_repo.py
app/services/tools/: qdrant_search_tool.py  web_search_tool.py
app/services/web/: firecrawl_service.py
app/static/: app.js  index.html  styles.css
scripts/: build_legal_chunks_preview.py  build_legal_tree_preview.py  checkfacets.py  export_hybrid_artifacts.py  export_hybrid_artifacts_batched.py  import_hybrid_artifacts_to_qdrant.py  ingest_hybrid_qdrant.py  preview_html_markdown.py  rebuild_hybrid_manifest.py  seed_qdrant.py
