[project]
name = "agentic_legal"
version = "0.1.0"
description = "Starter skeleton for FastAPI + CrewAI + Qdrant + OpenAI legal MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "openai>=1.0.0",
  "qdrant-client>=1.17.1",
  "crewai>=0.95.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pandas>=3.0.2",
  "beautifulsoup4>=4.12.3",
  "tiktoken>=0.12.0",
  "langchain-text-splitters>=1.1.1",
  "sentence-transformers>=5.1.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]
